[package]
name = "tools_cli"
version = "0.1.0"
authors = ["weixin"]
edition = "2018"

[dependencies]
libc = "0.2.51"
rand = "0.6.5"
regex = "1.1.6"

clap = "2.33.0"
hyper = "0.12.27"
log = "0.4.6"
serde = "1.0.90"
serde_json = "1.0.39"
calamine = "0.15.4"
simple_excel_writer = "0.1.5"
oracle = "0.2.1"
redis = "0.10.0"

[lib]
name = "math"
path = "./math/src/main.rs"